--- a/gravity blocks/generic.css
+++ b/gravity blocks/generic.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #66a;
+    background-color: #417;
     font-family: Arial;
     font-weight: bold;
     overflow: hidden;
@@ -15,7 +15,7 @@ p {
 }
 
 #maintitle {
-    font-size: 100px;
+    font-size: 50px;
 }
 
 #thanksto {
@@ -45,13 +45,13 @@ p {
     user-select: none;
     cursor: pointer;
     border-radius: 5px;
-    background-color: #afa;
+    background-color: #7a7;
     margin-bottom: 10px;
     margin-left: 5px;
 }
 
 #returntomenu:active {
-    background-color: #9c9;
+    background-color: #595;
 }
 
 #status {
